# cc-research-project-template

./: .gitignore  CLAUDE.md  README.md
.claude/commands/: create-script.md  generate-venv-report.md  readme-clean.md
.claude/reference/: bibtex-format.md  latex-rules.md  latex-template.md  outline-format.md  reference-readme.md  reference-script.py  reference-venv-report.md  summary-format.md  venue-info.md  writing-style.md
code/: README.md
code/analysis/: README.md
code/cleaning/: README.md
code/data_collection/: README.md
code/generate_figures/: README.md
code/generate_reports/: README.md
code/generate_tables/: README.md
code/lib/: README.md  setup.py
code/misc/: README.md
code/notebooks/: README.md
code/tests/: README.md
code/toolkit/: README.md  pyproject.toml  setup.py
code/toolkit/toolkit/: README.md  data_models.py  metrics.py
data/: README.md
data/interim/: README.md
data/logs/: README.md
data/misc/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: README.md
docs/cc-docs/: README.md  getting-started.md  literature-review.md  paper-writing.md  repository-and-code-management.md
lit_review/: README.md
lit_review/paper_summaries/: README.md
lit_review/papers/: README.md
paper/: README.md
results/: README.md
results/figures/: README.md
results/reports/: README.md
results/tables/: README.md
workflow/: README.md  Snakefile
workflow/analyze/: README.md  Snakefile  config.yaml
workflow/clean/: README.md
workflow/collect/: README.md  Snakefile
workflow/visualize/: README.md
(+24 files in other folders)
